--- a/lojavirtual/src/main/webapp/cliente/CadastroCliente.xhtml
+++ b/lojavirtual/src/main/webapp/cliente/CadastroCliente.xhtml
@@ -22,7 +22,7 @@
 					styleClass="panelgrid-noborder"
 					columnClasses="ui-grid-col-2, ui-grid-col-4, ui-grid-col-2, ui-grid-col-4">
 			<p:outputLabel value="Nome:" for="nome" />
-			<p:inputText  size="30" id="nome" value="#{clientecontroler.cliente.nome}"/>
+			<p:inputText styleClass="up" size="30" id="nome" value="#{clientecontroler.cliente.nome}"/>
 
 			<p:outputLabel value="Endereço:"  for="endereço"/>
 			<p:inputText size="35" id="endereço" value="#{clientecontroler.cliente.endereço}" />
