--- a/lojavirtual/src/main/webapp/produto/CadastroProduto.xhtml
+++ b/lojavirtual/src/main/webapp/produto/CadastroProduto.xhtml
@@ -28,7 +28,7 @@
 			<p:inputText styleClass="up" size="20" id="codigo" value="#{produtocontroller.produto.codigo}" />
 
 			<p:outputLabel value="Quantidade:" for="quantidade" />
-			<p:inputText id="quantidade"  value="#{produtocontroller.produto.quantidade}" />
+			<p:inputNumber id="quantidade"  value="#{produtocontroller.produto.quantidade}" />
 
 			<p:outputLabel value="Valor:" for="valor"/>
 			<p:inputNumber id="valor"  decimalPlaces="2" value="#{produtocontroller.produto.valorUnitario}" />
