--- a/lojavirtual/src/main/webapp/index.xhtml
+++ b/lojavirtual/src/main/webapp/index.xhtml
@@ -22,7 +22,7 @@
             <p:messages  id="messages"  autoUpdate="true" closable="true" />
                 <span id="reauth-email" class="reauth-email"></span>
                 <p class="input_title">Email</p>
-                <p:inputText size="40" id="email" value="#{logincontroler.usuario.email}" class="login_box" placeholder="user01@IceCode.com" required="autofocus"/>
+                <p:inputText size="40" id="email" value="#{logincontroler.usuario.email}" class="login_box" placeholder="comercio@online.com" required="autofocus"/>
                 <p class="input_title">Senha</p>
                 <p:password id="senha" value="#{logincontroler.usuario.senha}" class="login_box" placeholder="******" required="autofocus"/>
                 
