--- a/lojavirtual/src/main/webapp/index.xhtml
+++ b/lojavirtual/src/main/webapp/index.xhtml
@@ -25,8 +25,8 @@
                 <p:inputText size="40" id="email" value="#{logincontroler.usuario.email}" class="login_box" placeholder="comercio@online.com" required="autofocus"/>
                 <p class="input_title">Senha</p>
                 <p:password id="senha" value="#{logincontroler.usuario.senha}" class="login_box" placeholder="******" required="autofocus"/>
-                
-                <p:commandButton value="Login"  class="btn btn-lg btn-primary" action="#{logincontroler.efetuaLogin}"/>
+                <br></br>
+                <p:commandButton value="Entrar"  class="btn btn-lg btn-primary" action="#{logincontroler.efetuaLogin}"/>
             </h:form><!-- /form -->
         </div><!-- /card-container -->       
     </div><!-- /container -->
